--- a/Typescript/aula02/src/components/Footer.module.css
+++ b/Typescript/aula02/src/components/Footer.module.css
@@ -1,8 +1,9 @@
 .footer {
-  background-color: black;
+  background-color: rgba(255,218,185);
   padding: 15px;
+  text-align: center;
 }
 
 .footer small {
-  color: #FFF;
+  color: rgba(255,69,0);
 }
