--- a/Typescript/aula02/src/components/Header.module.css
+++ b/Typescript/aula02/src/components/Header.module.css
@@ -1,6 +1,6 @@
 .header {
-  background-color: black;
-  padding: 15px;
+  background-color: rgba(255,218,185);
+  padding: 3px;
   font-weight: bold;
 }
 
@@ -11,6 +11,15 @@
 }
 
 .contentheader img {
-  width: 100px;
-  border-radius: 50%;
+  margin-left: 20%;
+  width: 50px;
+  border-radius: 70%;
+}
+
+.logo {
+  width: 20%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: rgba(255,69,0);
 }
