--- a/Typescript/aula02/src/components/Menu.module.css
+++ b/Typescript/aula02/src/components/Menu.module.css
@@ -3,10 +3,33 @@
   text-decoration: none;
 }
 
-.menu ul li {
-  display: inline-flex;
+.menu a:hover {
+  color: rgba(255,127,80);
+}
+
+.menu ul {
+  width: 60%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .menu li {
   margin-left: 10px;
+  list-style: none;
+}
+
+.menu li button {
+  background-color: rgba(255,127,80);
+  border: 1px solid rgba(255,127,80);
+  padding: 3px 20px;
+  color: white;
+  font-weight: bold;
+  border-radius: 8px;
+}
+
+.menu li button:hover {
+  cursor: pointer;
+  background-color: rgba(178,34,34);
+  border: 1px solid rgba(178,34,34);
 }
